complete design, slight mods

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -33,7 +33,7 @@
     align-items: center;
     justify-content: space-between;
 }
-#home-form-input{
+.home-form-input{
     width: 320px;
     height: 40px;
 
