--- a/src/components/LogoutBtn.css
+++ b/src/components/LogoutBtn.css
@@ -12,7 +12,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: 1s ease;
 }
 #logout-btn:hover{
-    background: #2f787a;;
+    transition: 1s ease;
+    background: #2f787a;
+    cursor: pointer;
 }
