--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -79,6 +79,14 @@
     font-size: 20px;
     color: #F4FFF8;
 }
+.welcome-form-button:hover{
+    background-color: #204f51;
+    cursor: pointer;
+}
+.welcome-form-button:active{
+    background-color: #1f4a4c;
+    cursor: pointer;
+}
 .welcome-type{
     font-size: 40px;
     font-weight: 100;
