--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,16 @@ html, body{
     width: 100%;
     margin: 0;
     padding: 0;
-
+    background-color: #8BAAAD;
     font-family: "Inder", sans-serif;
     font-weight: 200;
     font-style: normal;
     letter-spacing: 0.05cap;
+
+    overflow-x: hidden;
 }
 #root{
     height: 100%;
+    display: flex;
+    flex-wrap: wrap;
 }
