--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,6 @@
 #home-body{
-    background-color: #8BAAAD;
     height: 100%;
-
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,12 +9,15 @@
 #home-header{
     background-color: #245C5E;
     width: 100%;
-    height: 100px;
+    height: 100%;
+    max-height: 120px;
     color: #F4FFF8;
 
     display: flex;
     align-items: center;
     justify-content: center;
+    
+    position: relative;
 }
 #home-logo{
     margin: auto;
@@ -51,6 +53,7 @@
     font-size: 20px;
 
     padding-left: 20px;
+    z-index: 1;
 }
 #home-form-input:active{
     border-color: #CCCCCC;
@@ -85,7 +88,10 @@
     justify-content: space-between;
 
     width: 1000px;
-    height: 100%;
+    max-width: 1200px;
+    max-height: 1200px;
+
+    flex-wrap: wrap;
 }
 .home-tasks-list-container{
     display: flex;
@@ -145,6 +151,8 @@ hr{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
+    z-index: 1;
 }
 .home-tasks-list-item-button{
     width: 27px;
@@ -173,12 +181,14 @@ hr{
 .home-tasks-list-empty{
     height: 100%;
     width: 100%;
+    min-height: 200px;
 
     border: solid;
     border-width: 0;
     border-radius: 8px;
 
     transition: 0.4s;
+    padding-bottom: 40px;
 }
 .confirmation-widnow{
     position: absolute;
@@ -212,3 +222,12 @@ hr{
     background: #2f787a;
     cursor: pointer;
 }   
+@media screen and (max-width: 1000px) {
+    #home-tasks-container{
+        display: flex;
+        align-items: center;
+        height: 5%;
+        justify-content: center;
+        width: 100%;
+    }
+}
