--- a/src/pages/Welcome/Welcome.css
+++ b/src/pages/Welcome/Welcome.css
@@ -1,18 +1,20 @@
 .welcome-body{
     background-color: #8BAAAD;
-    height: 100%;
+    height: auto;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 
     overflow: hidden;
+    min-height: 100vh;
 }
 .welcome-container{
-    width: 60%;
+    width: 800px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+
 }
 
 .welcome-logo{
@@ -23,9 +25,11 @@
     animation-delay: 0s, 4s;
 }
 
-@media (zoom: larger) {
-  .welcome-body {
-    font-size: 18px;
-    color: blue;
+@media screen and (max-width: 900px) {
+  .welcome-container {
+    flex-direction: column;
+    align-items: center;
+
+    overflow: auto;
   }
 }
